# rustdesk-server-friendly

./: .gitignore  LICENSE  README.md  go.mod  pyproject.toml
cmd/rustdesk-friendly/: main.go
internal/acceptance/: checks.go  checks_test.go
internal/backup/: backup.go  backup_detect_test.go  backup_test.go
internal/bundle/: manifest.go  manifest_test.go
internal/common/: io.go
internal/doctor/: doctor.go  doctor_test.go
internal/guide/: guide.go  guide_test.go
internal/install/: install.go  install_test.go
internal/logpolicy/: apply.go  apply_test.go
internal/platform/: support.go
internal/restore/: restore.go  restore_test.go
internal/runtimeinfo/: detect.go  detect_test.go
internal/service/: manage.go  manage_test.go
internal/upstream/: rustdesk.go
internal/wizard/: wizard.go
scripts/: install_linux_binary.sh  install_windows_binary.ps1  setup_windows.ps1
src/rustdesk_server_friendly/: __init__.py  __main__.py  cli.py  content.py  gui.py  wizard.py
tests/: test_content.py
