[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustdesk-server-friendly"
version = "0.1.0"
description = "CLI and GUI helper for RustDesk self-host deployment, log limits, service setup, and migration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "fanli"}
]
keywords = ["rustdesk", "self-host", "deployment", "migration", "gui", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
rustdesk-friendly = "rustdesk_server_friendly.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
